[package]
name = "backgeard"
version = "0.1.0"
authors = ["Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["io-util", "macros", "process", "sync"] }
warp = "0.2"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
